feat: updated CollectionWorker